--- a/src/gui/am.css
+++ b/src/gui/am.css
@@ -4,7 +4,7 @@ html, body {
 	margin: 0;
 }
 
-/* body {
+body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -40,34 +40,25 @@ label {
 }
 
 input {
-	width: 50%;
+	width: 70%;
 	margin: auto;
 	font-weight: bold;
 }
 
 button {
-	box-shadow:inset 0px 1px 0px 0px #fff6af;
-	background:linear-gradient(to bottom, #ffec64 5%, #ffab23 100%);
-	background-color:#ffec64;
-	border-radius:6px;
+	background-color:#fff6b0;
 	border:1px solid #ffaa22;
 	display:block;
-	width: 30%;
+	width: 50%;
 	margin: auto;
-	cursor:pointer;
-	color:#333333;
 	font-family:Arial;
 	font-size:15px;
 	font-weight:bold;
-	padding:6px 24px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #ffee66;
 }
 button:hover {
-	background:linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
-	background-color:#ffab23;
+	background-color:#ffaa22;
 }
 button:active {
 	position:relative;
 	top:1px;
-} */
+}
