--- a/src/gui/query_comanda.css
+++ b/src/gui/query_comanda.css
@@ -1,19 +1,30 @@
-.platillo {
+.comanda {
 	border: 2px solid red;
 	border-radius: 6PX;
 	margin: 10px;
-	font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-	font-weight: bold;
+	font-family: 'Times New Roman', Times, serif;
+	font-weight: normal;
+	font-size: 18px;
 }
 
-.insumo {
-	font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+.comanda span {
+	display: block;
+}
+
+.platillo {
+	font-family: Arial, Helvetica, sans-serif;
 	font-weight: normal;
 	font-style: italic;
 	margin: 4px 50px 4px 50px;
 }
 
+.platillo span {
+	display: inline-block;
+}
+
 img {
-	width: 150px;
+	width: 80px;
 	display: block;
 }
+
+
